WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
272152
[GTK][WPE] missing URI for injected user scripts and style sheets
https://bugs.webkit.org/show_bug.cgi?id=272152
Summary
[GTK][WPE] missing URI for injected user scripts and style sheets
Przemyslaw Gorszkowski
Reported
2024-04-04 05:25:32 PDT
Current API to add user scripts, style sheets does not contain URI of the injected script, style sheet(webkit_user_script_new, webkit_user_content_manager_add_script, webkit_user_style_sheet_new, webkit_user_content_manager_add_style_sheet). It causes that user scripts/style sheets are not visible in web inspector. The idea is to create an URI in format: user-script:sha256hash(user-script-content) and user-style:sha256hash(user-style-sheet-content) - this change will not require an API change
Attachments
Add attachment
proposed patch, testcase, etc.
Przemyslaw Gorszkowski
Comment 1
2024-04-04 05:43:25 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/26843
EWS
Comment 2
2024-04-14 03:15:30 PDT
Committed
277470@main
(907d986d108c): <
https://commits.webkit.org/277470@main
> Reviewed commits have been landed. Closing PR #26843 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-04-14 03:16:13 PDT
<
rdar://problem/126435444
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug